--- a/vpn-game-generator2.html
+++ b/vpn-game-generator2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset='utf-8'/>
+    <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vpn Game Script Generator For Mikrotik Routeros (IP Address Games) - BuanaNETPBun.Github.io</title>
-    <meta content='Vpn Game Script Generator For Mikrotik Routeros (IP Address Games) - BuanaNETPBun.Github.io' name='description'/>
-    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'/>
-    <meta content='index, follow, noodp' name='robots'/>
+    <meta content='Vpn Game Script Generator For Mikrotik Routeros (IP Address Games) - BuanaNETPBun.Github.io' name='description'>
+    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Vpn Game Script Generator For Mikrotik (IP Address Game) By BuanaNET-Pbun">
     <meta property="og:description" content="Vpn Game Script Generator For Mikrotik (IP Address Game) By BuanaNET-Pbun">
@@ -28,12 +28,12 @@
       --------------------------------------------------------------- */  
       *{-webkit-transition: all .3s ease-in;-moz-transition: all .3s ease-in;-ms-transition: all .3s ease-in;transition: all .3s ease-in;}
       body, div, span, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, textarea, p, blockquote, th, td, tr, table{margin:0; padding:0}
-      body { font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; margin:2
+      body { font-size:16px; font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; margin:0px;}
+      html, body {
       height: 100%;
       width:100%;
       margin-top: 0px;
       padding:0;
-      font-size:16px;
       background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ;  
       }
       * {
@@ -273,6 +273,8 @@
       padding: 0;
       overflow: hidden;
       background-color: #f9f9f9;
+	  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
+	  margin-right:10px;
       }
       .mymenu li {
       float: left;
@@ -348,14 +350,13 @@
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
-        <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
     </div>
     <div id="wrap">
       <div class="logo">
         <a href="https://buananetpbun.github.io/vpn-game-generator2.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> 
         <div style="float:right">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
+          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
         </div>
         <div style="float:right; margin-right:5px; margin-top:1px">
           <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
