--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -383,6 +383,10 @@
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
       </ul>
+	  	   <div id="homepage" class="hide">
+          <button style="width:100px !important; padding:2px; margin:3px" id="signout">Logout</button>
+     <span style="font-weight:normal">Welcome back to my tool :) <span style="color:green" id="welcome-email"></span></span>
+        </div>
     </div>
     <div id="wrap">
       <div class="logo">
@@ -488,6 +492,210 @@ if (isModalLogin .length > 0) {
     location.reload();
 }
 }
+
+function CheckFunction(){
+	var isModalLogin = document.getElementsByClassName('modal-login');
+if (isModalLogin .length > 0) {
+}else {
+    alert("Please Login First.");
+    location.reload();
+}
+}
+	
+      document.getElementById("year").innerHTML = new Date().getFullYear();
+           var modal_click = document.getElementById("myModal");
+           var span_click = document.getElementsByClassName("close")[0];
+           function CallModal() {
+             modal_click.style.display = "block";
+           }
+           span_click.onclick = function() {
+             modal_click.style.display = "none";
+           }
+           window.onclick = function(event) {
+             if (event.target == modal_click) {
+               modal_click.style.display = "none";
+             }
+           }
+
+      
+            // Your web app's Firebase configuration
+      var firebaseConfig = {
+         apiKey: "AIzaSyAVAJkbUGmPHogF_WJRa3vxZ2YuKDsvqns",
+  authDomain: "buananetpbun-5d979.firebaseapp.com",
+  databaseURL: "https://buananetpbun-5d979.firebaseio.com",
+  projectId: "buananetpbun-5d979",
+  storageBucket: "buananetpbun-5d979.appspot.com",
+  messagingSenderId: "912166778245",
+  appId: "1:912166778245:web:c845ec7e720f7bd84580ec",
+  measurementId: "G-FSDV7HGD99"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+
+      //invokes firebase authentication.
+      const auth = firebase.auth();
+
+      document.querySelector("#show-register").addEventListener("click", () => {
+        showRegistration();
+      });
+
+      const showRegistration = () => {
+        document.querySelector("#registration-page").classList.remove("hide");
+        document.querySelector("#login-page").classList.add("hide");
+        document.querySelector("#homepage").classList.add("hide");
+		document.querySelector("#show-login").classList.remove("hide");
+		document.querySelector("#show-register").classList.add("hide");
+      };
+
+      document.querySelector("#show-login").addEventListener("click", () => {
+        showLogin();
+      });
+
+      const showLogin = () => {
+        document.querySelector("#registration-page").classList.add("hide");
+        document.querySelector("#login-page").classList.remove("hide");
+        document.querySelector("#homepage").classList.add("hide");
+		document.querySelector("#show-login").classList.add("hide");
+		document.querySelector("#show-register").classList.remove("hide");
+      };
+
+      document.querySelector("#signout").addEventListener("click", () => {
+        signOut();
+      });
+
+      const register = () => {
+        const email = document.querySelector("#registration-email").value;
+        const reemail = document.querySelector("#registration-reemail").value;
+        const password = document.querySelector("#registration-password").value;
+
+        if (email.trim() == "") {
+          alert("Enter E-mail.");
+        } else if (password.trim().length < 6) {
+          alert("Password must be at least 6 characters.");
+        } else if (email != reemail) {
+          alert("emails do not match.");
+        } else {
+          auth
+            .createUserWithEmailAndPassword(email, password)
+            .catch(function (error) {
+              // Handle Errors here.
+              var errorCode = error.code;
+              var errorMessage = error.message;
+              alert(errorMessage);
+              // ...
+            });
+        }
+      };
+
+      document.querySelector("#register").addEventListener("click", () => {
+        register();
+      });
+
+      //register when you hit the enter key
+      document
+        .querySelector("#registration-password")
+        .addEventListener("keyup", (e) => {
+          if (event.keyCode === 13) {
+            e.preventDefault();
+
+            register();
+          }
+        });
+
+      const login = () => {
+        const email = document.querySelector("#login-email").value;
+        const password = document.querySelector("#login-password").value;
+			
+        if (email.trim() == "") {
+          alert("Enter E-mail.");
+        } else if (password.trim() == "") {
+          alert("Enter Password.");
+        } else {
+          authenticate(email, password);
+        }
+      };
+
+      document.querySelector("#login").addEventListener("click", () => {
+        login();
+      });
+
+      //sign in when you hit enter
+      document
+        .querySelector("#login-password")
+        .addEventListener("keyup", (e) => {
+          if (event.keyCode === 13) {
+            e.preventDefault();
+
+            login();
+          }
+        });
+
+      const authenticate = (email, password) => {
+        const auth = firebase.auth();
+        auth.signInWithEmailAndPassword(email, password);
+        firebase
+          .auth()
+          .signInWithEmailAndPassword(email, password)
+          .catch(function (error) {
+            // Handle Errors here.
+            var errorCode = error.code;
+            var errorMessage = error.message;
+
+            alert(errorMessage);
+          });
+      };
+
+      const showHomepage = () => {
+        document.querySelector("#registration-page").classList.add("hide");
+        document.querySelector("#login-page").classList.add("hide");
+        document.querySelector("#homepage").classList.remove("hide");
+        document.querySelector("#myLogin").style.display = "none";
+		
+
+
+      };
+
+      const signOut = () => {
+        firebase
+          .auth()
+          .signOut()
+          .then(function () {
+            location.reload();
+          })
+          .catch(function (error) {
+            alert("error signing out, check network connection");
+          });
+      };
+
+      auth.onAuthStateChanged((firebaseUser) => {
+        if (firebaseUser) {
+          showHomepage();
+
+        }
+      });
+
+      document
+        .querySelector("#forgot-password")
+        .addEventListener("click", () => {
+          const email = document.querySelector("#login-email").value;
+          if (email.trim() == "") {
+            alert("Enter Your E-mail");
+          } else {
+            forgotPassword(email);
+          }
+        });
+
+      const forgotPassword = (email) => {
+        auth
+          .sendPasswordResetEmail(email)
+          .then(function () {
+            alert("Send to your e-mail successfully! if you don't see it, please check on the spam folder.");
+          })
+          .catch(function (error) {
+            alert("invalid e-mail or bad network connection.");
+          });
+      };
+	  
     </script> 
     <script>
    var _0xfd529b=_0xa216;(function(_0x41d4ec,_0x4aea2c){var _0x2cccbf=_0xa216,_0x5e4795=_0x41d4ec();while(!![]){try{var _0x9e28e3=parseInt(_0x2cccbf(0xe0))/0x1+parseInt(_0x2cccbf(0xb8))/0x2*(-parseInt(_0x2cccbf(0xa7))/0x3)+parseInt(_0x2cccbf(0xb2))/0x4+parseInt(_0x2cccbf(0xdb))/0x5*(-parseInt(_0x2cccbf(0x97))/0x6)+parseInt(_0x2cccbf(0xbe))/0x7*(parseInt(_0x2cccbf(0xa8))/0x8)+parseInt(_0x2cccbf(0xde))/0x9+-parseInt(_0x2cccbf(0xc8))/0xa;if(_0x9e28e3===_0x4aea2c)break;else _0x5e4795['push'](_0x5e4795['shift']());}catch(_0x4d63aa){_0x5e4795['push'](_0x5e4795['shift']());}}}(_0x5161,0x61417));var arrHead=new Array();arrHead=[_0xfd529b(0xd8),'Mangle\x20Chain',_0xfd529b(0xc1),_0xfd529b(0xae),_0xfd529b(0xa0),'Description'];function _0x5161(){var _0x172b7f=['</span>\x20','insertCell','getSelection','rows','onclick','addRange','<button\x20type=\x22button\x22\x20id=\x22addRow\x22\x20onclick=\x22addRow()\x22>Add+</button>','childNodes','button','5lCrcED','selectNodeContents','rowIndex','6787584IngYvz','createTextNode','247263hCtMXx','createElement','buananet','OPTION','getAttribute','parentNode','type','2168646AUdEMw','/mikrotik-block-sharing-hotspot.html','10.5.50.0/24','insertRow','execCommand','deleteRow','text','href','comment=\x22<span\x20style=\x22color:#ff6600\x22>','Change\x20TTL','postrouting','</span>\x22\x20','join','cells','github','comment','1863jrjuiZ','2824FkMSTE','createRange','getElementById','empTable','value','pbun','Local\x20IP\x20Address','Hotspot\x20Protect','removeRow(this)','fromether','85740mtlmzM','appendChild','removeAllRanges','input','https://','width','782joLMXd','length','placeholder','manglechain','dst-address=\x22<span\x20style=\x22color:#ff6600\x22>','createTextRange','6181zMdAIa','select','setAttribute','Local\x20Interface','fromIP','body','moveToElementText','changeTTL','item','replace','3319620lGGjyD','forward','innerHTML','push','selected','output','ether5','130px','style','Remove'];_0x5161=function(){return _0x172b7f;};return _0x5161();}function createTable(){var _0x1a20a9=_0xfd529b,_0xef8a84=document[_0x1a20a9(0xe1)]('table');_0xef8a84['setAttribute']('id','empTable');var _0x26ac55=_0xef8a84[_0x1a20a9(0x9a)](-0x1);for(var _0x2c4bfc=0x0;_0x2c4bfc<arrHead[_0x1a20a9(0xb9)];_0x2c4bfc++){var _0x2755d0=document[_0x1a20a9(0xe1)]('th');_0x2755d0[_0x1a20a9(0xca)]=arrHead[_0x2c4bfc],_0x26ac55[_0x1a20a9(0xb3)](_0x2755d0);}var _0x447d81=document[_0x1a20a9(0xaa)]('cont');_0x447d81[_0x1a20a9(0xb3)](_0xef8a84);}function addRow(){var _0x411395=_0xfd529b,_0x3351fe=document[_0x411395(0xaa)](_0x411395(0xab)),_0x46426a=_0x3351fe[_0x411395(0xd5)][_0x411395(0xb9)],_0x302ef7=_0x3351fe[_0x411395(0x9a)](_0x46426a);_0x302ef7=_0x3351fe[_0x411395(0x9a)](_0x46426a);for(var _0x764aae=0x0;_0x764aae<arrHead[_0x411395(0xb9)];_0x764aae++){var _0x22a308=document[_0x411395(0xe1)]('td');_0x22a308=_0x302ef7[_0x411395(0xd3)](_0x764aae);if(_0x764aae==0x0){var _0xd54c6b=document['createElement']('input');_0xd54c6b[_0x411395(0xc0)](_0x411395(0xe6),_0x411395(0xda)),_0xd54c6b[_0x411395(0xc0)]('value',_0x411395(0xd1)),_0xd54c6b[_0x411395(0xc0)](_0x411395(0xd6),_0x411395(0xb0)),_0x22a308[_0x411395(0xb3)](_0xd54c6b);}else{if(_0x764aae==0x1){var _0x4581a0=document[_0x411395(0xe1)]('SELECT'),_0x4bd06d=document[_0x411395(0xe1)]('OPTION');_0x4bd06d[_0x411395(0xc0)](_0x411395(0xe6),_0x411395(0x9d)),_0x4bd06d[_0x411395(0xcc)]=!![];var _0x4f16a4=document[_0x411395(0xe1)](_0x411395(0xe3));_0x4f16a4[_0x411395(0xc0)](_0x411395(0xe6),_0x411395(0x9d)),_0x4bd06d[_0x411395(0xb3)](document[_0x411395(0xdf)](_0x411395(0xa1))),_0x4f16a4[_0x411395(0xb3)](document[_0x411395(0xdf)](_0x411395(0xc9))),_0x4581a0['appendChild'](_0x4bd06d),_0x4581a0[_0x411395(0xb3)](_0x4f16a4),_0x4581a0[_0x411395(0xc0)]('id',_0x411395(0xbb)),_0x22a308[_0x411395(0xb3)](_0x4581a0),document['getElementById'](_0x411395(0xbb))[_0x411395(0xd0)][_0x411395(0xb7)]=_0x411395(0xcf);}else{if(_0x764aae==0x2){var _0x5ab872=document[_0x411395(0xe1)](_0x411395(0xb5));_0x5ab872[_0x411395(0xc0)]('type',_0x411395(0x9d)),_0x5ab872[_0x411395(0xc0)]('placeholder',_0x411395(0xce)),_0x5ab872[_0x411395(0xc0)]('id','fromether'),_0x22a308[_0x411395(0xb3)](_0x5ab872);}else{if(_0x764aae==0x3){var _0x5ab872=document['createElement']('input');_0x5ab872[_0x411395(0xc0)](_0x411395(0xe6),_0x411395(0x9d)),_0x5ab872[_0x411395(0xc0)](_0x411395(0xba),_0x411395(0x99)),_0x5ab872[_0x411395(0xc0)]('id',_0x411395(0xc2)),_0x22a308[_0x411395(0xb3)](_0x5ab872);}else{if(_0x764aae==0x4){var _0x5ab872=document['createElement'](_0x411395(0xb5));_0x5ab872[_0x411395(0xc0)](_0x411395(0xe6),_0x411395(0x9d)),_0x5ab872[_0x411395(0xc0)](_0x411395(0xba),'1'),_0x5ab872[_0x411395(0xc0)]('id',_0x411395(0xc5)),_0x22a308[_0x411395(0xb3)](_0x5ab872);}else{if(_0x764aae==0x5){var _0x5ab872=document[_0x411395(0xe1)](_0x411395(0xb5));_0x5ab872[_0x411395(0xc0)](_0x411395(0xe6),_0x411395(0x9d)),_0x5ab872[_0x411395(0xc0)]('placeholder',_0x411395(0xaf)),_0x5ab872[_0x411395(0xc0)]('id',_0x411395(0xa6)),_0x22a308['appendChild'](_0x5ab872);}}}}}}}}function _0xa216(_0x853ba8,_0x3970e7){var _0x51616d=_0x5161();return _0xa216=function(_0xa2169f,_0x57e28d){_0xa2169f=_0xa2169f-0x97;var _0x5d59ed=_0x51616d[_0xa2169f];return _0x5d59ed;},_0xa216(_0x853ba8,_0x3970e7);}function removeRow(_0x255b9b){var _0x3958af=_0xfd529b,_0x3bc362=document[_0x3958af(0xaa)](_0x3958af(0xab));_0x3bc362[_0x3958af(0x9c)](_0x255b9b[_0x3958af(0xe5)]['parentNode'][_0x3958af(0xdd)]),submit();}function submit(){var _0x2b0ea3=_0xfd529b,_0x9c95f6=document[_0x2b0ea3(0xaa)](_0x2b0ea3(0xab)),_0x10a09d=new Array();for(row=0x1;row<_0x9c95f6['rows'][_0x2b0ea3(0xb9)]-0x1;row++){for(c=0x0;c<_0x9c95f6[_0x2b0ea3(0xd5)][row][_0x2b0ea3(0xa4)]['length'];c++){var _0x8a55fd=_0x9c95f6[_0x2b0ea3(0xd5)][_0x2b0ea3(0xc6)](row)[_0x2b0ea3(0xa4)][c];_0x8a55fd[_0x2b0ea3(0xd9)][0x0]['getAttribute']('id')==_0x2b0ea3(0xbb)&&_0x10a09d[_0x2b0ea3(0xcb)]('/ip\x20firewall\x20mangle\x20add\x20action=<span\x20style=\x22color:#ff6600\x22>change-ttl</span>\x20chain=<span\x20style=\x22color:#ff6600\x22>'+_0x8a55fd[_0x2b0ea3(0xd9)][0x0][_0x2b0ea3(0xac)]['toLowerCase']()+_0x2b0ea3(0xd2)),_0x8a55fd[_0x2b0ea3(0xd9)][0x0][_0x2b0ea3(0xe4)]('id')==_0x2b0ea3(0xb1)&&_0x10a09d[_0x2b0ea3(0xcb)]('out-interface=\x22<span\x20style=\x22color:#ff6600\x22>'+_0x8a55fd[_0x2b0ea3(0xd9)][0x0]['value']+_0x2b0ea3(0xa2)),_0x8a55fd[_0x2b0ea3(0xd9)][0x0][_0x2b0ea3(0xe4)]('id')==_0x2b0ea3(0xc2)&&_0x10a09d[_0x2b0ea3(0xcb)](_0x2b0ea3(0xbc)+_0x8a55fd[_0x2b0ea3(0xd9)][0x0][_0x2b0ea3(0xac)]+_0x2b0ea3(0xa2)),_0x8a55fd[_0x2b0ea3(0xd9)][0x0][_0x2b0ea3(0xe4)]('id')==_0x2b0ea3(0xc5)&&_0x10a09d[_0x2b0ea3(0xcb)]('new-ttl=set:<span\x20style=\x22color:#ff6600\x22>'+_0x8a55fd['childNodes'][0x0][_0x2b0ea3(0xac)]+_0x2b0ea3(0xd2)),_0x8a55fd[_0x2b0ea3(0xd9)][0x0][_0x2b0ea3(0xe4)]('id')=='comment'&&_0x10a09d[_0x2b0ea3(0xcb)](_0x2b0ea3(0x9f)+_0x8a55fd[_0x2b0ea3(0xd9)][0x0]['value']+'</span>\x22\x20passthrough=no<br>');}}let _0xf69984=()=>{var _0x2c98e6=_0x2b0ea3;let _0x59cb96=_0x10a09d;document[_0x2c98e6(0xaa)](_0x2c98e6(0xcd))[_0x2c98e6(0xca)]=_0x59cb96[_0x2c98e6(0xa3)]('');};_0xf69984();var _0x31a625=_0x2b0ea3(0xb6),_0x167cf6=_0x2b0ea3(0xe2),_0x545fac=_0x2b0ea3(0xad),_0x9d1d2b=_0x2b0ea3(0xa5),_0x424a14='io',_0x3dd408=_0x31a625+_0x167cf6+_0x545fac+'.'+_0x9d1d2b+'.'+_0x424a14;window['location'][_0x2b0ea3(0x9e)]!==_0x3dd408+_0x2b0ea3(0x98)&&location[_0x2b0ea3(0xc7)](_0x3dd408+'/mikrotik-block-sharing-hotspot.html');}function selectElementContents(_0x2464c0){var _0x4e2963=_0xfd529b,_0x2f2e22=document[_0x4e2963(0xc3)],_0x37737d,_0x52de34;if(document[_0x4e2963(0xa9)]&&window[_0x4e2963(0xd4)]){_0x37737d=document[_0x4e2963(0xa9)](),_0x52de34=window['getSelection'](),_0x52de34[_0x4e2963(0xb4)]();try{_0x37737d[_0x4e2963(0xdc)](_0x2464c0),_0x52de34['addRange'](_0x37737d);}catch(_0x3e1b13){_0x37737d['selectNode'](_0x2464c0),_0x52de34[_0x4e2963(0xd7)](_0x37737d);}}else _0x2f2e22[_0x4e2963(0xbd)]&&(_0x37737d=_0x2f2e22[_0x4e2963(0xbd)](),_0x37737d[_0x4e2963(0xc4)](_0x2464c0),_0x37737d[_0x4e2963(0xbf)]());document[_0x4e2963(0x9b)]('copy');}
