--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -353,28 +353,28 @@
           <div style="clear:both"></div>
           <br>
           <label><b>More Hide Protection from Internet (WAN) Scanning</b></label><br>
-          <input type="checkbox" id="mikrotik-winbox" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-winbox" >
           <label for="mikrotik-winbox">Block Winbox Scan</label> 
-          <input type="checkbox" id="mikrotik-discovery" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-discovery" >
           <label for="mikrotik-discovery">Block Neighbor Discovery</label>
-          <input type="checkbox" id="mikrotik-mac-server" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-mac-server" >
           <label for="mikrotik-mac-server">Block Mac Server</label>
-          <input type="checkbox" id="mikrotik-traceroute" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-traceroute" >
           <label for="mikrotik-traceroute">Block Traceroute</label>
-          <input type="checkbox" id="mikrotik-rommon" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-rommon" >
           <label for="mikrotik-rommon">Block RoMON</label>
           <br>
-          <input type="checkbox" id="mikrotik-dns" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-dns" >
           <label for="mikrotik-dns">Block Open DNS</label>
-          <input type="checkbox" id="mikrotik-proxy" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-proxy" >
           <label for="mikrotik-proxy">Block Open PROXY</label>
-          <input type="checkbox" id="mikrotik-btest" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-btest" >
           <label for="mikrotik-btest">Block BTest</label>
-          <input type="checkbox" id="mikrotik-snmp" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-snmp" >
           <label for="mikrotik-snmp">Block SNMP</label>
-          <input type="checkbox" id="mikrotik-thedude" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-thedude" >
           <label for="mikrotik-thedude">Block The Dude</label>
-          <input type="checkbox" id="mikrotik-ipcloud" onclick="myCheck()">
+          <input type="checkbox" id="mikrotik-ipcloud" >
           <label for="mikrotik-ipcloud">Block IP Cloud</label>
           <div style="margin-top:30px"></div>
           <button style="margin-top:-5px" type="button" onclick="myFunction()">Generate</button> 
